--- a/_layouts/redirect.html
+++ b/_layouts/redirect.html
@@ -1,10 +1,13 @@
----
----
-
-<!doctype html>
+<!DOCTYPE html>
 <html>
-    <head>
-	<meta http-equiv="refresh" content="0; url={{site.lcb}}{page.newUrl}{{site.rcb}}">
-	<link rel="canonical" href="{{site.lcb}}{page.newUrl}{{site.rcb}}" />
-    </head>
+<head>
+<link rel="canonical" href="{{ page.redirect_to }}"/>
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<meta http-equiv="refresh" content="0;url={{ page.redirect_to }}" />
+</head>
+<body>
+    <h1>Redirecting...</h1>
+      <a href="{{ page.redirect_to }}">Click here if you are not redirected.<a>
+      <script>location='{{ page.redirect_to }}'</script>
+</body>
 </html>
